General improvements: - added more detail to the initial comment - ordered imports correctly - renamed methods to be more consistent - added predicate methods and 'isDocumented' 'isMember' - added doc comments describing purpose of 'EffectiveSourceSinceHelper'